--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
   },
   "dependencies": {
     "@vercel/analytics": "^1.2.2",
+    "@vercel/postgres": "^0.8.0",
     "classnames": "^2.5.1",
     "next": "^14.1.0",
     "next-seo": "^6.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "styled-jsx-plugin-postcss": "^4.0.1"
+    "styled-jsx-plugin-postcss": "^4.0.1",
+    "swr": "^2.2.5"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^14.1.0",
