--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@vercel/analytics": "^1.2.2",
     "@vercel/postgres": "^0.8.0",
     "classnames": "^2.5.1",
+    "cors": "^2.8.5",
     "next": "^14.1.0",
     "next-seo": "^6.4.0",
     "react": "^18.2.0",
@@ -26,6 +27,7 @@
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^14.1.0",
+    "@types/cors": "^2.8.17",
     "@types/node": "^20.11.10",
     "@types/react": "^18.2.48",
     "@typescript-eslint/eslint-plugin": "^6.19.1",
