--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cors": "^2.8.5",
     "next": "^14.1.0",
     "next-seo": "^6.4.0",
+    "nextjs-cors": "^2.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "styled-jsx-plugin-postcss": "^4.0.1",
